--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,61 +4,64 @@
     	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
     	<script src="messaging.js"></script>
     	<style>
+.test-border {
+	border: 1px solid gray;
+}    	
+    	
 div.main {
-    width: 100%;
-	height: 100%;
-//    border: 1px solid gray;
-	background-color: #aaff80;
+	width: 100%; 
+	height: 100%;	    
+ 	background-color: #aaff80;
 }
 
 header {
-    padding: 1pt;
+	padding: 1pt;
     color: black;
-    background-color: #aaff80;
-    clear: left;
-    text-align: center;
-    font: large;
-    height: 5%;
+    text-align: center;    
+	font-family: fantasy;
+	font-size: x-large;
+	font-weight: 100;
+	float: none;
 }
 
 footer {
     padding: 1pt;
     color: black;
-    background-color: #aaff80;
-    clear: left;
     text-align: center;
-    font: small;
-    height: 3%;
+    font-family: fantasy;
+	font-size: small;
+	font-weight: 100;
+	clear: left;
 }
 
 
 nav {
-    float: left;
-    max-width: 160px;
-    margin: 0;
+	float: left;    
     padding: 1em;
-    background-color: #aaff80;
-    height: 88%;
 }
 
 nav ul {
-    list-style-type: none;
+	list-style-type: none;
     padding: 0;
-    background-color: #aaff80;
+}
+
+nav ul li {
+ 	text-align: right;
+ 	padding-top: 1em;
+ 	padding-bottom: 1em;
 }
    
 nav ul a {
-    text-decoration: none;
+	text-decoration: none;
+	word-break: keep-all;
 }
 
 article {
-    height: 88%;
-    margin-left: 170px;
+	float: left;
     border-left: 1px solid gray;
     padding: 1em;
-    overflow: hidden;
-    background-color: #aaff80;
 }
+
 </style>
     </head>
 	<body>
@@ -75,8 +78,10 @@ article {
 			</nav>
 			<article>
 			  	<h1>Welcome</h1>
-			  	<p>We have crafted a web application using Spring Boot and AngularJS to demonstrate how things can be accomplished with simple solutions.</p>
-			  	<p>Please, freely navigate and experience simple solutions in action.</p>
+			  	<p>Some people love complex solution. I like simple solution.</p>
+			  	<p>Welcome to my collection of simple solutions.</p>
+			  	<p>Here, I'm putting together various technologies I came across.</p>
+			  	<p>Please feel free to navigate and experience simple solutions in action.</p>
 			</article>
 	    	<footer>Copyright &copy; simpsolu.com</footer>
 	    </div>
