--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,86 +1,87 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
-<html ng-app="messagingApp">
+<html>
 	<head>
-    	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
-    	<script src="messaging.js"></script>
+		<meta charset="UTF-8">
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular-route.js"></script>
+  <script src="index.js"></script>
+  <script src="simpsolu.js"></script>
+  <script type="text/javascript">
+    // angular.element(document.getElementsByTagName('head')).append(angular.element('<base href="' + window.location.pathname + '" />'));
+  </script>
     	<style>
-.test-border {
-	border: 1px solid gray;
-}    	
-    	
-div.main {
-	width: 100%; 
-	height: 100%;	    
- 	background-color: #aaff80;
+div.main { 
+    width: 100%;
+	height: 100%;
+//    border: 1px solid gray;
+	background-color: #aaff80;
+	overflow: auto;
 }
 
 header {
-	padding: 1pt;
-    color: black;
-    text-align: center;    
-	font-family: fantasy;
-	font-size: x-large;
-	font-weight: 100;
-	float: none;
+    padding: 3pt;
+    text-align: center;
+    font-family: fantasy;
+    font-size: x-large;
 }
 
 footer {
-    padding: 1pt;
-    color: black;
-    text-align: center;
-    font-family: fantasy;
+    padding: 2pt;
+    color: gray;
+    clear: left;
+	text-align: center;
+	font-family: fantasy;
 	font-size: small;
-	font-weight: 100;
-	clear: left;
 }
 
 
 nav {
-	float: left;    
-    padding: 1em;
+    float: left;
+    margin: 0;
+    padding: 2pt;
+    max-width: 25%;
 }
 
+
 nav ul {
-	list-style-type: none;
-    padding: 0;
+    list-style-type: none;
+/*     padding: 0; */
 }
 
 nav ul li {
- 	text-align: right;
- 	padding-top: 1em;
- 	padding-bottom: 1em;
+	padding: 5px;
+	text-align: right;
 }
-   
+
 nav ul a {
-	text-decoration: none;
-	word-break: keep-all;
+    text-decoration: none;
 }
 
 article {
+    padding-left: 1em;
+/*     overflow: auto; */
 	float: left;
-    border-left: 1px solid gray;
-    padding: 1em;
+	max-width: 75%;
+/*	vh: 100%; */
 }
-		</style>
+
+</style>
     </head>
-	<body>
+	<body ng-app="simpsoluApp">
 	    <div class="main">
 	    	<header>
    				<h1>Simple Solutions In Cloud</h1>
 			</header>
 			<nav>
 				<ul>
-				    <li><a href="#">Cloud Computing</a></li>
-    				<li><a href="#">What is Java?</a></li>
-    				<li><a href="#">Art Gallery</a></li>
+					<li><a href="#!/Home">Home</a></li>
+					<li><a href="#!/ArtGallery">Art Gallery <img align="center" height="30px" width="30px" src="image/Castell.png"></a></li>    									
+				    <li><a href="#!/CloudComputing">Cloud Computing <img align="center" height="30px" width="30px" src="image/CloudMonkey.gif"></a></li>
+    				<li><a href="#!/WhatIsJava">What is Java? <img align="center" height="30px" width="30px" src="image/icons8-Java-48.png"></a></li>
   				</ul>
 			</nav>
-			<article>
-			  	<h1>Welcome</h1>
-			  	<p>Some people love complex solution. I like simple solution.</p>
-			  	<p>Welcome to my collection of simple solutions.</p>
-			  	<p>Here, I'm putting together various technologies I came across.</p>
-			  	<p>Please feel free to navigate and experience simple solutions in action.</p>
+			<article style="overflow: auto">
+			  	<div ng-view/>
 			</article>
 	    	<footer>Copyright &copy; simpsolu.com</footer>
 	    </div>
