Added links to Vaadin implementation.

--- a/src/main/resources/static/WhatIsJava.html
+++ b/src/main/resources/static/WhatIsJava.html
@@ -36,5 +36,4 @@ method overriding allows specialized abstraction to override methods
 in generalized abstraction in such a way that when the method in the
 generalized abstraction is called, the method in the specialized
 abstraction is executed instead.</p>
-</body>
-</html>
+</div>
